# sensormap-client

./: .gitignore  LICENSE  README.md  UploadPlotsAndSamples.ipynb  pyproject.toml  tox.ini
docs/: Area.md  AreaCreate.md  AreaUpdate.md  ClosestSensorProfile.md  DefaultApi.md  Gnss.md  GnssCreate.md  GnssUpdate.md  Gradientchoices.md  InstrumentExperiment.md  InstrumentExperimentChannel.md  InstrumentExperimentChannelCreate.md  InstrumentExperimentChannelUpdate.md  InstrumentExperimentCreate.md  InstrumentExperimentUpdate.md  Plot.md  PlotCreate.md  PlotSample.md  PlotSampleCreate.md  PlotSampleUpdate.md  PlotUpdate.md  Project.md  ProjectCreate.md  ProjectUpdate.md  Sensor.md  SensorCreate.md  SensorData.md  SensorProfile.md  SensorProfileAssignment.md  SensorProfileAssignmentCreate.md  SensorProfileAssignmentUpdate.md  SensorProfileCreate.md  SensorProfileUpdate.md  SensorUpdate.md  SoilProfile.md  SoilProfileCreate.md  SoilProfileUpdate.md  SoilType.md  SoilTypeCreate.md  SoilTypeUpdate.md  (+4 more)
sensormap_client/: __init__.py  api_client.py  configuration.py  exceptions.py  rest.py  wrapper.py
test/: test_area.py  test_area_create.py  test_area_update.py  test_closest_sensor_profile.py  test_default_api.py  test_gnss.py  test_gnss_create.py  test_gnss_update.py  test_gradientchoices.py  test_instrument_experiment.py  test_instrument_experiment_channel.py  test_instrument_experiment_channel_create.py  test_instrument_experiment_channel_update.py  test_instrument_experiment_create.py  test_instrument_experiment_update.py  test_plot.py  test_plot_create.py  test_project.py  (+26 more)
(+46 files in other folders)
